k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: storypointer
spec:
  selector:
    app: storypointer
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
